examples/test/testpolicy9116.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9116
  namespace: namespace225
spec:
  podSelector:
    matchLabels:
      key37: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value41
          key48: value46
          key34: value32
      podSelector:
        matchLabels:
          key4: value15
          key30: value37
